--- a/templates/email/template.html
+++ b/templates/email/template.html
@@ -165,7 +165,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <p style="line-height: 140%;"><strong>Landing Page:</strong> <a rel="noopener" href="{{web_page}}" target="_blank">{{web_page}}</a></p>
 <p style="line-height: 140%;"><strong>Visit Time:</strong> {{visit_time}}</p>
 <p style="line-height: 140%;"><strong>Departure Time:</strong> {{departure_time}}</p>
-<p style="line-height: 140%;"><strong>Duration of User Stay: </strong> {{time_on_page}}</p>
+<p style="line-height: 140%;"><strong>Duration of User Stay: </strong> {{time_on_page}} minutes</p>
   </div>
 
       </td>
